refactor: moved Loader on middle display

--- a/src/components/Loader/Loader.module.scss
+++ b/src/components/Loader/Loader.module.scss
@@ -1,3 +1,11 @@
+.loader_container {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 50;
+}
+
 .loader {
   width: 2.5rem;
   height: 2.5rem;
