--- a/src/components/Docs/Docs.module.scss
+++ b/src/components/Docs/Docs.module.scss
@@ -1,5 +1,5 @@
 .container {
-  width: 30rem;
+  width: 35rem;
   height: 100%;
   padding: 1rem;
   display: flex;
@@ -12,8 +12,12 @@
   right: 0px;
   overflow-y: auto;
   overflow-x: auto;
-  top: 0px;
-  z-index: 2;
+  top: -2rem;
+  z-index: 25;
+
+  @media screen and (max-width: $mobile-screen) {
+    width: 27rem;
+  }
 }
 
 /* Firefox */
