--- a/src/components/InputEndpoint/InputEndpoint.module.scss
+++ b/src/components/InputEndpoint/InputEndpoint.module.scss
@@ -3,23 +3,40 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  margin-right: 30px;
+  gap: 1rem;
+  margin-right: 3rem;
+
+  @media screen and (max-width: $tablet-screen) {
+    flex-direction: column;
+    margin-right: 2rem;
+  }
+
+  @media screen and (max-width: $mobile-screen) {
+    margin-right: 1rem;
+  }
 }
 
 .form_container {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 1rem;
-  margin-bottom: 1rem;
+
+  @media screen and (max-width: $tablet-screen) {
+    flex-direction: column;
+    align-items: flex-end;
+  }
 }
 
 .input_container {
   height: 2.6rem;
-  width: 39vmax;
+  width: 50vmax;
+
   @media (max-width: $laptop-screen) {
-    width: 60vw;
+    width: 100%;
   }
+
 }
 
 .input_field {
@@ -28,6 +45,7 @@
 
 .endpoint_text {
   font-weight: 500;
+  word-break: break-word;
 }
 
 .valid_color {
