--- a/src/components/UI/TextArea/TextArea.module.scss
+++ b/src/components/UI/TextArea/TextArea.module.scss
@@ -18,7 +18,6 @@
   top: 0.2rem;
   left: 3.5rem;
   text-align: right;
-  margin-bottom: 0.4rem;
   border: none;
   width: 3.5rem;
   overflow-y: hidden;
@@ -73,6 +72,26 @@
   margin-right: 3rem;
   @media (max-width: 390px) {
     margin-right: 9rem;
+  }
+
+  @media (max-width: 390px) {
+    margin-right: 4rem;
+  }
+
+  @media (max-width: 370px) {
+    margin-right: 6rem;
+  }
+
+  @media (max-width: 350px) {
+    margin-right: 8rem;
+  }
+
+  @media (max-width: 330px) {
+    margin-right: 10rem;
+  }
+
+  @media (max-width: 315px) {
+    margin-right: 11rem;
   }
 }
 
