--- a/src/components/common/BasicButton/BasicButton.module.scss
+++ b/src/components/common/BasicButton/BasicButton.module.scss
@@ -4,6 +4,7 @@
   background-color: var(--bg-button);
   transition: background-color 0.2s linear;
   border-radius: 0.5rem;
+  text-wrap: nowrap;
 
   &:hover {
     background-color: var(--bg-button-hover);
