fix: fix scss in .line_counter

--- a/src/components/UI/TextArea/TextArea.module.scss
+++ b/src/components/UI/TextArea/TextArea.module.scss
@@ -17,6 +17,7 @@
   position: relative;
   top: 0.2rem;
   left: 3.5rem;
+  margin-bottom: 0.3rem;
   text-align: right;
   border: none;
   width: 3.5rem;
