--- a/src/components/GraphPlayground/GraphPlayground.module.scss
+++ b/src/components/GraphPlayground/GraphPlayground.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/breakpoints.scss';
+
 .playground_container {
   margin-bottom: -2rem;
   padding: 0 1rem;
@@ -29,6 +31,7 @@
   min-height: 68vh;
   padding: 0 30px 0 0;
   justify-content: center;
+
   @media (max-width: $laptop-screen) {
     flex-direction: column;
     max-height: none;
@@ -55,6 +58,7 @@
   width: 50vw;
   max-width: 60vw;
   min-width: 40rem;
+
   @media (max-width: $laptop-screen) {
     width: calc(100% + 20px);
     max-width: none;
@@ -115,21 +119,26 @@
   cursor: pointer;
   transition: all 0.3s ease-in-out;
   transform: rotate(-90deg);
+
   &:hover {
     background-color: var(--bg-button-hover);
   }
+
   &:disabled {
     cursor: initial;
     background-color: var(--bg-button-disable);
   }
+
   svg {
     transform: rotate(90deg);
     vertical-align: middle;
     stroke: var(--font-accent-color);
   }
+
   @media (max-width: $laptop-screen) {
     top: 28rem;
   }
+
   @media (max-width: 390px) {
     top: 35rem;
   }
@@ -146,17 +155,21 @@
   color: var(--font-accent-color);
   cursor: pointer;
   transition: all 0.3s ease-in-out;
+
   &:first-child {
     margin-left: 32px;
   }
+
   &:hover {
     background-color: var(--bg-button-hover);
   }
+
   @media (max-width: $laptop-screen) {
     &:first-child {
       margin-left: 52px;
     }
   }
+
   @media (max-width: 390px) {
     &:first-child {
       margin-left: 32px;
@@ -179,17 +192,21 @@
   border-radius: 2rem;
   background-color: var(--bg-button);
   transition: background-color 0.2s linear;
+
   &:hover {
     background-color: var(--bg-button-hover);
   }
+
   &:disabled {
     cursor: initial;
     background-color: var(--bg-button-disable);
   }
+
   svg {
     vertical-align: middle;
     stroke: var(--font-accent-color);
   }
+
   @media (max-width: 390px) {
     left: 85vw;
   }
