--- a/src/components/Loader/Loader.module.scss
+++ b/src/components/Loader/Loader.module.scss
@@ -26,7 +26,7 @@
   position: absolute;
   inset: 0px;
   border-radius: 50%;
-  border: 0.5rem solid #fff;
+  border: 0.5rem solid var(--color-link);
   animation: prixClipFix 2s linear infinite;
 }
 
