--- a/src/components/UI/TextArea/TextArea.module.scss
+++ b/src/components/UI/TextArea/TextArea.module.scss
@@ -1,11 +1,12 @@
 .text_editor {
   display: flex;
+  position: relative;
   height: 90%;
   width: 100%;
   min-width: 300px;
   resize: both;
-  @media (max-width: 390px) {
-    width: 105vw;
+  @media (max-width: 400px) {
+    width: 99vw;
   }
 }
 
@@ -16,8 +17,8 @@
 .line_counter {
   position: relative;
   top: 0.2rem;
-  left: 3.5rem;
-  margin-bottom: 0.3rem;
+  left: 3.4rem;
+  margin-bottom: 0.4rem;
   text-align: right;
   border: none;
   width: 3.5rem;
@@ -29,6 +30,9 @@
   font-family: monospace, sans-serif;
   outline: none;
   resize: none;
+  @media (max-width: 400px) {
+    left: 3.7rem;
+  }
 }
 
 .code_editor {
@@ -50,6 +54,9 @@
     background-color: inherit;
     border: 2px solid var(--border-input-focus);
   }
+  @media (max-width: 400px) {
+    width: 80.5%;
+  }
 }
 
 .code_editor::-webkit-scrollbar {
@@ -68,31 +75,17 @@
 }
 
 .info_line {
+  position: absolute;
   font-size: 1.2rem;
   text-align: right;
-  margin-right: 3rem;
-  @media (max-width: 390px) {
-    margin-right: 9rem;
+  bottom: -1.5rem;
+  right: 2.5rem;
+  z-index: 10;
+  @media (max-width: 400px) and (min-width: 320px) {
+    right: 4.5rem;
   }
-
-  @media (max-width: 390px) {
-    margin-right: 4rem;
-  }
-
-  @media (max-width: 370px) {
-    margin-right: 6rem;
-  }
-
-  @media (max-width: 350px) {
-    margin-right: 8rem;
-  }
-
-  @media (max-width: 330px) {
-    margin-right: 10rem;
-  }
-
-  @media (max-width: 315px) {
-    margin-right: 11rem;
+  @media (max-width: 320px) {
+    right: 2.7rem;
   }
 }
 
